table overflow fix 10?

--- a/themes/whodathunk-theme/assets/css/main.css
+++ b/themes/whodathunk-theme/assets/css/main.css
@@ -25,7 +25,7 @@ table {
     border-bottom: 1px solid #999999;
     /* solving overflowing tables in mobile, although it adds ugly borders over and under tables
     https://stackoverflow.com/questions/25296479/how-to-get-overflowauto-behavior-with-html-table*/
-    display: block;
+    display: inline-block;
     overflow: auto;
 }
 th,
